Get tests passing in safari/firefox
Change-Id: I1d85a24ce12bcd2f556abc14e028d9926180b978

--- a/polygerrit-ui/app/elements/diff/gr-diff-comment-thread-group/gr-diff-comment-thread-group_test.html
+++ b/polygerrit-ui/app/elements/diff/gr-diff-comment-thread-group/gr-diff-comment-thread-group_test.html
@@ -128,7 +128,7 @@ limitations under the License.
     });
 
     test('_sortByDate', function() {
-      var threadGroups = expectedThreadGroups = [
+      var threadGroups = [
         {
           start_datetime: '2015-12-23 15:00:20.396000000',
           comments: [],
@@ -141,7 +141,7 @@ limitations under the License.
         },
       ];
 
-      var expectedResult = expectedThreadGroups = [
+      var expectedResult = [
         {
           start_datetime: '2015-12-22 15:00:10.396000000',
           comments: [],
