Fix range issue when there is a base patch that is not parent
Change-Id: I24d1f063bb6abacd1fdcfc7289762d5061a8337e

--- a/polygerrit-ui/app/elements/shared/gr-rest-api-interface/gr-rest-api-interface_test.html
+++ b/polygerrit-ui/app/elements/shared/gr-rest-api-interface/gr-rest-api-interface_test.html
@@ -20,6 +20,7 @@ limitations under the License.
 
 <script src="../../../bower_components/webcomponentsjs/webcomponents.min.js"></script>
 <script src="../../../bower_components/web-component-tester/browser.js"></script>
+<script src="../../../scripts/util.js"></script>
 
 <link rel="import" href="../../../bower_components/iron-test-helpers/iron-test-helpers.html">
 <link rel="import" href="gr-rest-api-interface.html">
@@ -133,11 +134,13 @@ limitations under the License.
           '/COMMIT_MSG': [],
           'sieve.go': [
             {
+              updated: '2017-02-03 22:32:28.000000000',
               message: 'this isn’t quite right',
             },
             {
               side: 'PARENT',
               message: 'how did this work in the first place?',
+              updated: '2017-02-03 22:33:28.000000000',
             },
           ],
         });
@@ -149,14 +152,127 @@ limitations under the License.
             side: 'PARENT',
             message: 'how did this work in the first place?',
             path: 'sieve.go',
+            updated: '2017-02-03 22:33:28.000000000',
           });
           assert.equal(obj.comments.length, 1);
           assert.deepEqual(obj.comments[0], {
             message: 'this isn’t quite right',
             path: 'sieve.go',
+            updated: '2017-02-03 22:32:28.000000000',
           });
           done();
         });
+    });
+
+    test('_setRange', function() {
+      var comments = [
+        {
+          id: 1,
+          side: 'PARENT',
+          message: 'how did this work in the first place?',
+          updated: '2017-02-03 22:32:28.000000000',
+          range: {
+            start_line: 1,
+            start_character: 1,
+            end_line: 2,
+            end_character: 1
+          },
+        },
+        {
+          id: 2,
+          in_reply_to: 1,
+          message: 'this isn’t quite right',
+          updated: '2017-02-03 22:33:28.000000000',
+        },
+      ];
+      var expectedResult = {
+        id: 2,
+        in_reply_to: 1,
+        message: 'this isn’t quite right',
+        updated: '2017-02-03 22:33:28.000000000',
+        range: {
+          start_line: 1,
+          start_character: 1,
+          end_line: 2,
+          end_character: 1
+        },
+      };
+      var comment = comments[1];
+      assert.deepEqual(element._setRange(comments, comment), expectedResult);
+    });
+
+    test('_setRanges', function() {
+      var comment = {
+        id: 3,
+        in_reply_to: 2,
+        message: 'this isn’t quite right either',
+        updated: '2017-02-03 22:34:28.000000000',
+      };
+      var comments = [
+        {
+          id: 3,
+          in_reply_to: 2,
+          message: 'this isn’t quite right either',
+          updated: '2017-02-03 22:34:28.000000000',
+        },
+        {
+          id: 2,
+          in_reply_to: 1,
+          message: 'this isn’t quite right',
+          updated: '2017-02-03 22:33:28.000000000',
+        },
+        {
+          id: 1,
+          side: 'PARENT',
+          message: 'how did this work in the first place?',
+          updated: '2017-02-03 22:32:28.000000000',
+          range: {
+            start_line: 1,
+            start_character: 1,
+            end_line: 2,
+            end_character: 1
+          },
+        },
+      ];
+      var expectedResult = [
+        {
+          id: 1,
+          side: 'PARENT',
+          message: 'how did this work in the first place?',
+          updated: '2017-02-03 22:32:28.000000000',
+          range: {
+            start_line: 1,
+            start_character: 1,
+            end_line: 2,
+            end_character: 1
+          },
+        },
+        {
+          id: 2,
+          in_reply_to: 1,
+          message: 'this isn’t quite right',
+          updated: '2017-02-03 22:33:28.000000000',
+          range: {
+            start_line: 1,
+            start_character: 1,
+            end_line: 2,
+            end_character: 1
+          },
+        },
+        {
+          id: 3,
+          in_reply_to: 2,
+          message: 'this isn’t quite right either',
+          updated: '2017-02-03 22:34:28.000000000',
+          range: {
+            start_line: 1,
+            start_character: 1,
+            end_line: 2,
+            end_character: 1
+          },
+        },
+      ];
+      assert.deepEqual(element._setRanges(comments), expectedResult);
     });
 
     test('differing patch diff comments are properly grouped', function(done) {
@@ -167,10 +283,12 @@ limitations under the License.
             'sieve.go': [
               {
                 message: 'this isn’t quite right',
+                updated: '2017-02-03 22:32:28.000000000',
               },
               {
                 side: 'PARENT',
                 message: 'how did this work in the first place?',
+                updated: '2017-02-03 22:33:28.000000000',
               },
             ],
           });
@@ -180,13 +298,16 @@ limitations under the License.
             'sieve.go': [
               {
                 message: 'What on earth are you thinking, here?',
+                updated: '2017-02-03 22:32:28.000000000',
               },
               {
                 side: 'PARENT',
                 message: 'Yeah not sure how this worked either?',
+                updated: '2017-02-03 22:33:28.000000000',
               },
               {
                 message: '¯\\_(ツ)_/¯',
+                updated: '2017-02-04 22:33:28.000000000',
               },
             ],
           });
@@ -198,15 +319,18 @@ limitations under the License.
           assert.deepEqual(obj.baseComments[0], {
             message: 'this isn’t quite right',
             path: 'sieve.go',
+            updated: '2017-02-03 22:32:28.000000000',
           });
           assert.equal(obj.comments.length, 2);
           assert.deepEqual(obj.comments[0], {
             message: 'What on earth are you thinking, here?',
             path: 'sieve.go',
+            updated: '2017-02-03 22:32:28.000000000',
           });
           assert.deepEqual(obj.comments[1], {
             message: '¯\\_(ツ)_/¯',
             path: 'sieve.go',
+            updated: '2017-02-04 22:33:28.000000000',
           });
           done();
         });
