Revert "Lower the maximum number of files for bulk actions from 255 -> 50"
This reverts commit 6b038c6588c996c7e1048f5341d186a484d3775e.

Reason for revert: This is no longer needed thanks to Ib83ff5157177e1c890db8a82fbc25df8fecbe065

Change-Id: I6887eb6ded1f5a9a8d182a286c0accfcc188125e

--- a/polygerrit-ui/app/elements/change/gr-file-list/gr-file-list.html
+++ b/polygerrit-ui/app/elements/change/gr-file-list/gr-file-list.html
@@ -189,15 +189,15 @@ limitations under the License.
       <div>Files</div>
       <div class="rightControls">
         <template is="dom-if"
-            if="[[_fileListActionsVisible(_shownFiles.*, _maxFilesForBulkActions)]]">
+            if="[[_fileListActionsVisible(_numFilesShown, _maxFilesForBulkActions)]]">
           <gr-button link on-tap="_expandAllDiffs">Show diffs</gr-button>
           <span class="separator">/</span>
           <gr-button link on-tap="_collapseAllDiffs">Hide diffs</gr-button>
         </template>
         <template is="dom-if"
-            if="[[!_fileListActionsVisible(_shownFiles.*, _maxFilesForBulkActions)]]">
+            if="[[!_fileListActionsVisible(_numFilesShown, _maxFilesForBulkActions)]]">
           <div class="warning">
-            Bulk actions disabled because there are too many files.
+            Bulk file list actions disabled for large amounts of files
           </div>
         </template>
         <span class="separator">/</span>
