--- a/polygerrit-ui/app/elements/shared/gr-rest-api-interface/gr-etag-decorator_test.html
+++ b/polygerrit-ui/app/elements/shared/gr-rest-api-interface/gr-etag-decorator_test.html
@@ -26,7 +26,7 @@ limitations under the License.
 <script src="../../../test/test-pre-setup.js"></script>
 <link rel="import" href="../../../test/common-test-setup.html"/>
 
-<script src="gr-etag-decorator.js"></script>
+<script src="gr-etag-decorator.html" type="module"></script>
 
 <script>
   suite('gr-etag-decorator', async () => {
