Remove autocomplete once cherry pick branch is selected
* User is only allowed to select one branch. The current UI did not make
it clear that we can select only one branch since the autocomplete
dropdown did not disappear after selecting a branch and the user could
type more things.
This change makes it extremely clear by removing the user interaction
with the autocomplete once the branch is selected

Screenshot: https://screenshot.googleplex.com/fe5C6mSgGeQ

Change-Id: I7fb2df4e4358df301bb7fc577a9d999fd9add7cc

--- a/polygerrit-ui/app/elements/change/gr-confirm-cherrypick-dialog/gr-confirm-cherrypick-dialog.html
+++ b/polygerrit-ui/app/elements/change/gr-confirm-cherrypick-dialog/gr-confirm-cherrypick-dialog.html
@@ -21,6 +21,7 @@ limitations under the License.
 <link rel="import" href="../../../behaviors/fire-behavior/fire-behavior.html">
 <link rel="import" href="../../../styles/shared-styles.html">
 <link rel="import" href="../../shared/gr-autocomplete/gr-autocomplete.html">
+<link rel="import" href="../../shared/gr-linked-chip/gr-linked-chip.html">
 <link rel="import" href="../../shared/gr-dialog/gr-dialog.html">
 <link rel="import" href="../../shared/gr-rest-api-interface/gr-rest-api-interface.html">
 
@@ -53,6 +54,13 @@ limitations under the License.
         line-height: var(--line-height-mono);
         width: 73ch; /* Add a char to account for the border. */
       }
+      .icon {
+        width: var(--spacing-m);
+        height: var(--spacing-m);
+      }
+      .branch-selected {
+        margin: var(--spacing-m);
+      }
     </style>
     <gr-dialog
         confirm-label="Cherry Pick"
@@ -63,12 +71,23 @@ limitations under the License.
         <label for="branchInput">
           Cherry Pick to branch
         </label>
-        <gr-autocomplete
-            id="branchInput"
-            text="{{branch}}"
-            query="[[_query]]"
-            placeholder="Destination branch">
-        </gr-autocomplete>
+        <div class="branch-input-container" hidden$="[[_isBranchSelected]]">
+          <gr-autocomplete
+              id="branchInput"
+              text="{{branch}}"
+              query="[[_query]]"
+              on-commit="_handleBranchSelected"
+              placeholder="Destination branch">
+          </gr-autocomplete>
+        </div>
+        <div class="branch-selected" hidden$="[[!_isBranchSelected]]">
+          <gr-linked-chip
+            text="[[branch]]"
+            on-remove="_handleBranchRemoved"
+            removable
+          >
+          </gr-linked-chip>
+        </div>
         <label for="baseInput">
           Provide base commit sha1 for cherry-pick
         </label>
