Add show-revision-actions event once revisionActions is available
After https://gerrit-review.googlesource.com/c/gerrit/+/238972,
revisionActions is fetched separately and `showchange` is no longer
waiting for that.

this change will add a show_revision_actions event so plugin can hook
to this one to add / modify / remove revision actions

Bug: Issue 12051
Change-Id: I009f0b96b7f985bee1d53286c1dea427e41616fa

--- a/polygerrit-ui/app/elements/change/gr-change-actions/gr-change-actions_test.html
+++ b/polygerrit-ui/app/elements/change/gr-change-actions/gr-change-actions_test.html
@@ -114,6 +114,15 @@ limitations under the License.
       sandbox.restore();
     });
 
+    test('show-revision-actions event should fire', done => {
+      const spy = sinon.spy(element, '_sendShowRevisionActions');
+      element.reload();
+      flush(() => {
+        assert.isTrue(spy.called);
+        done();
+      });
+    });
+
     test('primary and secondary actions split properly', () => {
       // Submit should be the only primary action.
       assert.equal(element._topLevelPrimaryActions.length, 1);
