--- a/polygerrit-ui/app/elements/change/gr-change-actions/gr-change-actions.html
+++ b/polygerrit-ui/app/elements/change/gr-change-actions/gr-change-actions.html
@@ -175,6 +175,8 @@ limitations under the License.
       <gr-confirm-cherrypick-dialog id="confirmCherrypick"
           class="confirmDialog"
           change-status="[[changeStatus]]"
+          changes="[[_cherryPickChanges]]"
+          status-cherry-pick="[[_statusCherryPick]]"
           commit-message="[[commitMessage]]"
           commit-num="[[commitNum]]"
           on-confirm="_handleCherrypickConfirm"
