Support code with backticks in gr-formatted-text
screenshot: https://imgur.com/a/irP6kYk

- recognize single line usage of '`code`' or '```code```'
(as long as begins and ends with same number of '`')
- recognize multi-line usuage when starts and ends with '```' (three backticks)

Also refactored the formatted-text a little bit:
- instead of using `\n\n`, parse by line (\n) now
- remove the `getTextContent` as its not used anywhere

Change-Id: I2c6f9077311cbdbbef49200e00da1fe8a8bf2847

--- a/polygerrit-ui/app/elements/shared/gr-formatted-text/gr-formatted-text.html
+++ b/polygerrit-ui/app/elements/shared/gr-formatted-text/gr-formatted-text.html
@@ -27,12 +27,14 @@ limitations under the License.
       }
       p,
       ul,
+      code,
       blockquote,
       gr-linked-text.pre {
         margin: 0 0 var(--spacing-m) 0;
       }
       p,
       ul,
+      code,
       blockquote {
         max-width: var(--gr-formatted-text-prose-max-width, none);
       }
@@ -42,9 +44,15 @@ limitations under the License.
       :host(.noTrailingMargin) gr-linked-text.pre:last-child {
         margin: 0;
       }
+      code,
       blockquote {
         border-left: 1px solid #aaa;
         padding: 0 var(--spacing-m);
+      }
+      code {
+        display: block;
+        white-space: pre;
+        color: var(--deemphasized-text-color);
       }
       li {
         list-style-type: disc;
