--- a/polygerrit-ui/app/elements/shared/gr-formatted-text/gr-formatted-text_test.html
+++ b/polygerrit-ui/app/elements/shared/gr-formatted-text/gr-formatted-text_test.html
@@ -80,13 +80,11 @@ limitations under the License.
       assertBlock(result, 0, 'paragraph', comment);
     });
 
-    test('parse para break', () => {
+    test('parse para break without special blocks', () => {
       const comment = 'Para 1\n\nPara 2\n\nPara 3';
       const result = element._computeBlocks(comment);
-      assert.lengthOf(result, 3);
-      assertBlock(result, 0, 'paragraph', 'Para 1');
-      assertBlock(result, 1, 'paragraph', 'Para 2');
-      assertBlock(result, 2, 'paragraph', 'Para 3');
+      assert.lengthOf(result, 1);
+      assertBlock(result, 0, 'paragraph', comment);
     });
 
     test('parse quote', () => {
@@ -107,14 +105,6 @@ limitations under the License.
       assertBlock(result[0].blocks, 0, 'paragraph', 'Quote text');
     });
 
-    test('parse excludes empty', () => {
-      const comment = 'Para 1\n\n\n\nPara 2';
-      const result = element._computeBlocks(comment);
-      assert.lengthOf(result, 2);
-      assertBlock(result, 0, 'paragraph', 'Para 1');
-      assertBlock(result, 1, 'paragraph', 'Para 2');
-    });
-
     test('parse multiline quote', () => {
       const comment = '> Quote line 1\n> Quote line 2\n > Quote line 3\n';
       const result = element._computeBlocks(comment);
@@ -122,7 +112,7 @@ limitations under the License.
       assert.equal(result[0].type, 'quote');
       assert.lengthOf(result[0].blocks, 1);
       assertBlock(result[0].blocks, 0, 'paragraph',
-          'Quote line 1\nQuote line 2\nQuote line 3\n');
+          'Quote line 1\nQuote line 2\nQuote line 3');
     });
 
     test('parse pre', () => {
@@ -141,13 +131,6 @@ limitations under the License.
 
     test('parse tab pre', () => {
       const comment = '\tOne tab indent.\n\tAnother line.\n  Yet another!';
-      const result = element._computeBlocks(comment);
-      assert.lengthOf(result, 1);
-      assertBlock(result, 0, 'pre', comment);
-    });
-
-    test('parse intermediate leading whitespace pre', () => {
-      const comment = 'No indent.\n\tNonzero indent.\nNo indent again.';
       const result = element._computeBlocks(comment);
       assert.lengthOf(result, 1);
       assertBlock(result, 0, 'pre', comment);
@@ -197,19 +180,19 @@ limitations under the License.
           'Parting words.';
       const result = element._computeBlocks(comment);
       assert.lengthOf(result, 7);
-      assertBlock(result, 0, 'paragraph', 'Paragraph\nacross\na\nfew\nlines.');
+      assertBlock(result, 0, 'paragraph', 'Paragraph\nacross\na\nfew\nlines.\n');
 
       assert.equal(result[1].type, 'quote');
       assert.lengthOf(result[1].blocks, 1);
       assertBlock(result[1].blocks, 0, 'paragraph',
           'Quote\nacross\nnot many lines.');
 
-      assertBlock(result, 2, 'paragraph', 'Another paragraph');
+      assertBlock(result, 2, 'paragraph', 'Another paragraph\n');
       assertListBlock(result, 3, 0, 'Series');
       assertListBlock(result, 3, 1, 'of');
       assertListBlock(result, 3, 2, 'list');
       assertListBlock(result, 3, 3, 'items');
-      assertBlock(result, 4, 'paragraph', 'Yet another paragraph');
+      assertBlock(result, 4, 'paragraph', 'Yet another paragraph\n');
       assertBlock(result, 5, 'pre', '\tPreformatted text.');
       assertBlock(result, 6, 'paragraph', 'Parting words.');
     });
@@ -218,13 +201,13 @@ limitations under the License.
       const comment = 'A\n\n* line 1\n* 2nd line';
       const result = element._computeBlocks(comment);
       assert.lengthOf(result, 2);
-      assertBlock(result, 0, 'paragraph', 'A');
+      assertBlock(result, 0, 'paragraph', 'A\n');
       assertListBlock(result, 1, 0, 'line 1');
       assertListBlock(result, 1, 1, '2nd line');
     });
 
     test('bullet list 2', () => {
-      const comment = 'A\n\n* line 1\n* 2nd line\n\nB';
+      const comment = 'A\n* line 1\n* 2nd line\n\nB';
       const result = element._computeBlocks(comment);
       assert.lengthOf(result, 3);
       assertBlock(result, 0, 'paragraph', 'A');
@@ -260,13 +243,13 @@ limitations under the License.
           '* Be very unlucky\n';
       const result = element._computeBlocks(comment);
       assert.lengthOf(result, 2);
-      assertBlock(result, 0, 'paragraph', 'To see this bug, you have to:');
+      assertBlock(result, 0, 'paragraph', 'To see this bug,\nyou have to:');
       assertListBlock(result, 1, 0, 'Be on IMAP or EAS (not on POP)');
       assertListBlock(result, 1, 1, 'Be very unlucky');
     });
 
     test('dash list 1', () => {
-      const comment = 'A\n\n- line 1\n- 2nd line';
+      const comment = 'A\n- line 1\n- 2nd line';
       const result = element._computeBlocks(comment);
       assert.lengthOf(result, 2);
       assertBlock(result, 0, 'paragraph', 'A');
@@ -275,7 +258,7 @@ limitations under the License.
     });
 
     test('dash list 2', () => {
-      const comment = 'A\n\n- line 1\n- 2nd line\n\nB';
+      const comment = 'A\n- line 1\n- 2nd line\n\nB';
       const result = element._computeBlocks(comment);
       assert.lengthOf(result, 3);
       assertBlock(result, 0, 'paragraph', 'A');
@@ -293,8 +276,18 @@ limitations under the License.
       assertBlock(result, 1, 'paragraph', 'B');
     });
 
+    test('nested list will NOT be recognized', () => {
+      // will be rendered as two separate lists
+      const comment = '- line 1\n  - line with indentation\n- line 2';
+      const result = element._computeBlocks(comment);
+      assert.lengthOf(result, 3);
+      assertListBlock(result, 0, 0, 'line 1');
+      assert.equal(result[1].type, 'pre');
+      assertListBlock(result, 2, 0, 'line 2');
+    });
+
     test('pre format 1', () => {
-      const comment = 'A\n\n  This is pre\n  formatted';
+      const comment = 'A\n  This is pre\n  formatted';
       const result = element._computeBlocks(comment);
       assert.lengthOf(result, 2);
       assertBlock(result, 0, 'paragraph', 'A');
@@ -302,7 +295,7 @@ limitations under the License.
     });
 
     test('pre format 2', () => {
-      const comment = 'A\n\n  This is pre\n  formatted\n\nbut this is not';
+      const comment = 'A\n  This is pre\n  formatted\n\nbut this is not';
       const result = element._computeBlocks(comment);
       assert.lengthOf(result, 3);
       assertBlock(result, 0, 'paragraph', 'A');
@@ -311,7 +304,7 @@ limitations under the License.
     });
 
     test('pre format 3', () => {
-      const comment = 'A\n\n  Q\n    <R>\n  S\n\nB';
+      const comment = 'A\n  Q\n    <R>\n  S\n\nB';
       const result = element._computeBlocks(comment);
       assert.lengthOf(result, 3);
       assertBlock(result, 0, 'paragraph', 'A');
@@ -338,7 +331,7 @@ limitations under the License.
     });
 
     test('quote 2', () => {
-      const comment = 'See this said:\n\n > a quoted\n > string block\n\nOK?';
+      const comment = 'See this said:\n > a quoted\n > string block\n\nOK?';
       const result = element._computeBlocks(comment);
       assert.lengthOf(result, 3);
       assertBlock(result, 0, 'paragraph', 'See this said:');
@@ -357,15 +350,65 @@ limitations under the License.
       assert.equal(result[0].blocks[0].type, 'quote');
       assert.lengthOf(result[0].blocks[0].blocks, 1);
       assertBlock(result[0].blocks[0].blocks, 0, 'paragraph', 'prior');
-      assertBlock(result[0].blocks, 1, 'paragraph', 'next\n');
+      assertBlock(result[0].blocks, 1, 'paragraph', 'next');
     });
 
-    test('getTextContent', () => {
-      const comment = 'Paragraph\n\n  pre\n\n* List\n* Of\n* Items\n\n> Quote';
-      element.content = comment;
-      const result = element.getTextContent();
-      const expected = 'Paragraph\n\n  pre\n\nList\nOf\nItems\n\nQuote';
-      assert.equal(result, expected);
+    test('code 1', () => {
+      const comment = '```\n// test code\n```';
+      const result = element._computeBlocks(comment);
+      assert.lengthOf(result, 1);
+      assert.equal(result[0].type, 'code');
+      assert.equal(result[0].text, '// test code');
+    });
+
+    test('code 2', () => {
+      const comment = 'test code\n```// test code```';
+      const result = element._computeBlocks(comment);
+      assert.lengthOf(result, 2);
+      assert.equal(result[0].type, 'paragraph');
+      assert.equal(result[0].text, 'test code');
+      assert.equal(result[1].type, 'code');
+      assert.equal(result[1].text, '// test code');
+    });
+
+    test('code 3', () => {
+      const comment = 'test code\n```// test code```';
+      const result = element._computeBlocks(comment);
+      assert.lengthOf(result, 2);
+      assert.equal(result[0].type, 'paragraph');
+      assert.equal(result[0].text, 'test code');
+      assert.equal(result[1].type, 'code');
+      assert.equal(result[1].text, '// test code');
+    });
+
+    test('not a code', () => {
+      const comment = 'test code\n```// test code';
+      const result = element._computeBlocks(comment);
+      assert.lengthOf(result, 1);
+      assert.equal(result[0].type, 'paragraph');
+      assert.equal(result[0].text, 'test code\n```// test code');
+    });
+
+    test('not a code 2', () => {
+      const comment = 'test code\n```\n// test code';
+      const result = element._computeBlocks(comment);
+      assert.lengthOf(result, 2);
+      assert.equal(result[0].type, 'paragraph');
+      assert.equal(result[0].text, 'test code');
+      assert.equal(result[1].type, 'paragraph');
+      assert.equal(result[1].text, '```\n// test code');
+    });
+
+    test('mix all 1', () => {
+      const comment = ' bullets:\n- bullet 1\n- bullet 2\n\ncode example:\n' +
+        '```// test code```\n\n> reference is here';
+      const result = element._computeBlocks(comment);
+      assert.lengthOf(result, 5);
+      assert.equal(result[0].type, 'pre');
+      assert.equal(result[1].type, 'list');
+      assert.equal(result[2].type, 'paragraph');
+      assert.equal(result[3].type, 'code');
+      assert.equal(result[4].type, 'quote');
     });
 
     test('_computeNodes called without config', () => {
