Convert GrChangeReplyInterface to class
Also fix some issues:
1. GrChangeReplyInterface should always refer to the current replyDialog element
2. clean up callbacks on `detached`

Bug: chromium:961209
Change-Id: I9f1cc7b40ac022fac694c2cfbba8ea8ba68beeaa

--- a/polygerrit-ui/app/elements/plugins/gr-dom-hooks/gr-dom-hooks_test.html
+++ b/polygerrit-ui/app/elements/plugins/gr-dom-hooks/gr-dom-hooks_test.html
@@ -39,8 +39,13 @@ limitations under the License.
 <script>
   suite('gr-dom-hooks tests', async () => {
     await readyToTest();
-    const PUBLIC_METHODS =
-        ['onAttached', 'getLastAttached', 'getAllAttached', 'getModuleName'];
+    const PUBLIC_METHODS =[
+      'onAttached',
+      'onDetached',
+      'getLastAttached',
+      'getAllAttached',
+      'getModuleName',
+    ];
 
     let instance;
     let sandbox;
@@ -109,6 +114,19 @@ limitations under the License.
         hookInternal.handleInstanceAttached(el2);
         assert.isTrue(onAttachedSpy.firstCall.calledWithExactly(el1));
         assert.isTrue(onAttachedSpy.secondCall.calledWithExactly(el2));
+      });
+
+      test('onDetached', () => {
+        const onDetachedSpy = sandbox.spy();
+        hook.onDetached(onDetachedSpy);
+        const [el1, el2] = [
+          document.createElement(hook.getModuleName()),
+          document.createElement(hook.getModuleName()),
+        ];
+        hookInternal.handleInstanceDetached(el1);
+        assert.isTrue(onDetachedSpy.firstCall.calledWithExactly(el1));
+        hookInternal.handleInstanceDetached(el2);
+        assert.isTrue(onDetachedSpy.secondCall.calledWithExactly(el2));
       });
 
       test('getAllAttached', () => {
